Added prop validation annotations (#97)

--- a/examples/custom/mistral/src/app/api/page.mdx
+++ b/examples/custom/mistral/src/app/api/page.mdx
@@ -633,7 +633,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1264,7 +1264,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1924,7 +1924,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2495,7 +2495,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2999,7 +2999,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3630,7 +3630,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4335,7 +4335,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4966,7 +4966,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5208,7 +5208,7 @@ The ID of the agent to use for this completion.
   id="frequency_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -7155,7 +7155,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -8903,7 +8903,7 @@ The ID of the agent to use for this completion.
   id="frequency_penalty"
   headingId="operation-stream_agents_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -10850,7 +10850,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_agents_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -13037,7 +13037,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_list_responses_200_application-json_agent_completion_args_temperature"
   parentId="Agent_completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -13677,7 +13677,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_list_responses_200_application-json_agent_tools_documentlibrarytool_library_ids"
   parentId="Agent_tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -14299,7 +14299,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_create_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -14870,7 +14870,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_create_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -15374,7 +15374,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -16005,7 +16005,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -20818,7 +20818,7 @@ with Mistral(
   id="frequency_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -22799,7 +22799,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -23424,7 +23424,7 @@ this restriction of `Function` is used to select a specific function to call
   id="top_p"
   headingId="operation-chat_completion_v1_chat_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -24589,7 +24589,7 @@ with Mistral(
   id="frequency_penalty"
   headingId="operation-stream_chat_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -26570,7 +26570,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_chat_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -27189,7 +27189,7 @@ this restriction of `Function` is used to select a specific function to call
   id="top_p"
   headingId="operation-stream_chat_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -31283,7 +31283,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_get_responses_200_application-json_modelconversation_completion_args_temperature"
   parentId="ModelConversation_completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -31904,7 +31904,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_conversations_get_responses_200_application-json_modelconversation_tools_documentlibrarytool_library_ids"
   parentId="ModelConversation_tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -36796,7 +36796,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_append_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -39929,7 +39929,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_restart_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -43110,7 +43110,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_restart_stream_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -46763,7 +46763,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_append_stream_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -50453,7 +50453,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_list_responses_200_application-json_modelconversation_completion_args_temperature"
   parentId="ModelConversation_completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -51074,7 +51074,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_conversations_list_responses_200_application-json_modelconversation_tools_documentlibrarytool_library_ids"
   parentId="ModelConversation_tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -51867,7 +51867,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_start_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -53279,7 +53279,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_conversations_start_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -55526,7 +55526,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_conversations_start_stream_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -56938,7 +56938,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_conversations_start_stream_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -62106,7 +62106,7 @@ return a+b
   id="top_p"
   headingId="operation-fim_completion_v1_fim_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -63486,7 +63486,7 @@ return a+b
   id="top_p"
   headingId="operation-stream_fim_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -65140,7 +65140,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -66500,7 +66500,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -67800,7 +67800,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -69160,7 +69160,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -70454,7 +70454,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -71814,7 +71814,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -72770,7 +72770,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_hyperparameters_learning_rate"
   parentId="data_CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -73736,7 +73736,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_hyperparameters_learning_rate"
   parentId="data_ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -74720,7 +74720,7 @@ This field will be required in a future release.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_classifier_targets_classifiertargetin_weight"
   parentId="classifier_targets_ClassifierTargetIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -74832,7 +74832,7 @@ The fine-tuning hyperparameter settings used in a fine-tune job.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_completiontrainingparametersin_learning_rate"
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -74989,7 +74989,7 @@ The fine-tuning hyperparameter settings used in a classifier fine-tune job.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_classifiertrainingparametersin_learning_rate"
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -75143,7 +75143,7 @@ _Default Value:_ `0.0001`
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_integrations_wandbintegration_api_key"
   parentId="integrations_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -75255,7 +75255,7 @@ _Default Value:_ `"wandb"`
   id="invalid_sample_skip_percentage"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_invalid_sample_skip_percentage"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 0.5","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -75369,7 +75369,7 @@ The name of the model to fine-tune.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_repositories_wandbintegration_api_key"
   parentId="repositories_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -75805,7 +75805,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_hyperparameters_learning_rate"
   parentId="CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -76770,7 +76770,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_hyperparameters_learning_rate"
   parentId="ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -83371,7 +83371,7 @@ The dimensions of the PDF Page's screenshot image
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_dpi"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -83396,7 +83396,7 @@ Dots per inch of the page-image
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_height"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -83421,7 +83421,7 @@ Height of the image in pixels
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_width"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -83639,7 +83639,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_index"
   parentId="pages_OCRPageObject"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -83726,7 +83726,7 @@ The markdown string response of the page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_pages_processed"
   parentId="usage_info"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
