--- a/examples/custom/pokeapi/src/app/api/endpoint/evolution/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/evolution/page.mdx
@@ -556,7 +556,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_chain_retrieve_responses_200_application-json_baby_trigger_item_name"
   parentId="baby_trigger_item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1801,7 +1801,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_evolution_trigger_list_responses_200_application-json_results_evolutiontriggersummary_name"
   parentId="results_EvolutionTriggerSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2014,7 +2014,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2099,7 +2099,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_names_evolutiontriggername_language_name"
   parentId="names_EvolutionTriggerName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2137,7 +2137,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_trigger_retrieve_responses_200_application-json_names_evolutiontriggername_name"
   parentId="names_EvolutionTriggerName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
