--- a/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -359,7 +359,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_generation_list_responses_200_application-json_results_generationsummary_name"
   parentId="results_GenerationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -602,7 +602,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary_name"
   parentId="abilities_AbilitySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -676,7 +676,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_main_region_name"
   parentId="main_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -761,7 +761,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary_name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -798,7 +798,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -883,7 +883,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname_language_name"
   parentId="names_GenerationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -921,7 +921,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname_name"
   parentId="names_GenerationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -987,7 +987,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary_name"
   parentId="pokemon_species_PokemonSpeciesSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1072,7 +1072,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary_name"
   parentId="types_TypeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1157,7 +1157,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary_name"
   parentId="version_groups_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1530,7 +1530,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary_name"
   parentId="results_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1773,7 +1773,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription_description"
   parentId="descriptions_PokedexDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1811,7 +1811,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription_language_name"
   parentId="descriptions_PokedexDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1884,7 +1884,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1969,7 +1969,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname_language_name"
   parentId="names_PokedexName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2007,7 +2007,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname_name"
   parentId="names_PokedexName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2197,7 +2197,7 @@ https://pokeapi.co/api/v2/pokemon-species/1/
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_region_name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2723,7 +2723,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_list_responses_200_application-json_results_versionsummary_name"
   parentId="results_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2944,7 +2944,7 @@ not sure how to add anything other than a hyperlink
   id="name"
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3029,7 +3029,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname_language_name"
   parentId="names_VersionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3067,7 +3067,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname_name"
   parentId="names_VersionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3104,7 +3104,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_version_group_name"
   parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3480,7 +3480,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary_name"
   parentId="results_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3694,7 +3694,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_generation_name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3854,7 +3854,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   id="name"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4148,7 +4148,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary_name"
   parentId="versions_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
