--- a/examples/custom/pokeapi/src/app/api/endpoint/items/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/items/page.mdx
@@ -355,7 +355,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_list_responses_200_application-json_results_itemsummary_name"
   parentId="results_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -747,7 +747,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_category_name"
   parentId="category"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -850,7 +850,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -888,7 +888,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_language_name"
   parentId="effect_entries_ItemEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -926,7 +926,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_short_effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 300","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1011,7 +1011,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext_language_name"
   parentId="flavor_text_entries_ItemFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1087,7 +1087,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext_version_group_name"
   parentId="flavor_text_entries_ItemFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1143,7 +1143,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_fling_effect_name"
   parentId="fling_effect"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1284,7 +1284,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_game_indices_itemgameindex_generation_name"
   parentId="game_indices_ItemGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1549,7 +1549,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="name"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1634,7 +1634,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname_language_name"
   parentId="names_ItemName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1672,7 +1672,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname_name"
   parentId="names_ItemName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2105,7 +2105,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary_name"
   parentId="results_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2366,7 +2366,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_items_itemsummary_name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2403,7 +2403,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2488,7 +2488,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname_language_name"
   parentId="names_ItemCategoryName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2526,7 +2526,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname_name"
   parentId="names_ItemCategoryName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2563,7 +2563,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_pocket_name"
   parentId="pocket"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2939,7 +2939,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary_name"
   parentId="results_ItemAttributeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3182,7 +3182,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription_description"
   parentId="descriptions_ItemAttributeDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3220,7 +3220,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription_language_name"
   parentId="descriptions_ItemAttributeDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3380,7 +3380,7 @@ https://pokeapi.co/api/v2/item/1/
   id="name"
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3465,7 +3465,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename_language_name"
   parentId="names_ItemAttributeName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3503,7 +3503,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename_name"
   parentId="names_ItemAttributeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3860,7 +3860,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary_name"
   parentId="results_ItemFlingEffectSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4103,7 +4103,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext_effect"
   parentId="effect_entries_ItemFlingEffectEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4141,7 +4141,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext_language_name"
   parentId="effect_entries_ItemFlingEffectEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4244,7 +4244,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_items_itemsummary_name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4281,7 +4281,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4638,7 +4638,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary_name"
   parentId="results_ItemPocketSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4881,7 +4881,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_categories_itemcategorysummary_name"
   parentId="categories_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4936,7 +4936,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5021,7 +5021,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname_language_name"
   parentId="names_ItemPocketName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5059,7 +5059,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname_name"
   parentId="names_ItemPocketName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
