--- a/examples/custom/pokeapi/src/app/api/endpoint/location/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/location/page.mdx
@@ -358,7 +358,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_list_responses_200_application-json_results_locationsummary_name"
   parentId="results_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -601,7 +601,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_areas_locationareasummary_name"
   parentId="areas_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -724,7 +724,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_game_indices_locationgameindex_generation_name"
   parentId="game_indices_LocationGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -779,7 +779,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -864,7 +864,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname_language_name"
   parentId="names_LocationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -902,7 +902,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname_name"
   parentId="names_LocationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -939,7 +939,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_region_name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1290,7 +1290,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary_name"
   parentId="results_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1770,7 +1770,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_location_name"
   parentId="location"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1807,7 +1807,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   id="name"
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1892,7 +1892,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname_language_name"
   parentId="names_LocationAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1930,7 +1930,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname_name"
   parentId="names_LocationAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2517,7 +2517,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary_name"
   parentId="results_PalParkAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2730,7 +2730,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2815,7 +2815,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname_language_name"
   parentId="names_PalParkAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2853,7 +2853,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname_name"
   parentId="names_PalParkAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3386,7 +3386,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_region_list_responses_200_application-json_results_regionsummary_name"
   parentId="results_RegionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3644,7 +3644,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_locations_locationsummary_name"
   parentId="locations_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3700,7 +3700,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_main_generation_name"
   parentId="main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3737,7 +3737,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3822,7 +3822,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname_language_name"
   parentId="names_RegionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3860,7 +3860,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname_name"
   parentId="names_RegionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3926,7 +3926,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_pokedexes_pokedexsummary_name"
   parentId="pokedexes_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4011,7 +4011,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_name"
   parentId="version_groups_main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
