--- a/examples/custom/pokeapi/src/app/api/endpoint/machines/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/machines/page.mdx
@@ -571,7 +571,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve_responses_200_application-json_item_name"
   parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -627,7 +627,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve_responses_200_application-json_move_name"
   parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -683,7 +683,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve_responses_200_application-json_version_group_name"
   parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
