--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -2934,7 +2934,7 @@ defaultValue: MyDefaultValue
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+dimensions+ocrpagedimensions+dpi"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2992,7 +2992,7 @@ defaultValue: MyDefaultValue
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+dimensions+ocrpagedimensions+height"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3050,7 +3050,7 @@ defaultValue: MyDefaultValue
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+dimensions+ocrpagedimensions+width"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3698,7 +3698,7 @@ defaultValue: MyDefaultValue
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+pages+ocrpageobject+index"
   parentId="pages_OCRPageObject"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3949,7 +3949,7 @@ defaultValue: MyDefaultValue
   headingId="operation-ocr_v1_ocr_post+responses+200+application-json+usage_info+pages_processed"
   parentId="usage_info"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
