--- a/examples/docusaurus/pokeapi/docs/api/endpoint/berries.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/berries.mdx
@@ -361,7 +361,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_list+responses+200+application-json+results+berrysummary+name"
   parentId="results_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -572,7 +572,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_retrieve+responses+200+application-json+firmness+name"
   parentId="firmness"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -740,7 +740,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve+responses+200+application-json+item+name"
   parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -795,7 +795,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -850,7 +850,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve+responses+200+application-json+natural_gift_type+name"
   parentId="natural_gift_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1280,7 +1280,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_firmness_list+responses+200+application-json+results+berryfirmnesssummary+name"
   parentId="results_BerryFirmnessSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1523,7 +1523,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+berries+berrysummary+name"
   parentId="berries_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1578,7 +1578,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1663,7 +1663,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+names+berryfirmnessname+language+name"
   parentId="names_BerryFirmnessName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1701,7 +1701,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve+responses+200+application-json+names+berryfirmnessname+name"
   parentId="names_BerryFirmnessName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2058,7 +2058,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_flavor_list+responses+200+application-json+results+berryflavorsummary+name"
   parentId="results_BerryFlavorSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2348,7 +2348,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+contest_type+name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2403,7 +2403,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2488,7 +2488,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+names+berryflavorname+language+name"
   parentId="names_BerryFlavorName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2526,7 +2526,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve+responses+200+application-json+names+berryflavorname+name"
   parentId="names_BerryFlavorName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
