--- a/examples/docusaurus/pokeapi/docs/api/endpoint/encounters.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/encounters.mdx
@@ -369,7 +369,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_method_list+responses+200+application-json+results+encountermethodsummary+name"
   parentId="results_EncounterMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -582,7 +582,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -667,7 +667,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+names+encountermethodname+language+name"
   parentId="names_EncounterMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -705,7 +705,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve+responses+200+application-json+names+encountermethodname+name"
   parentId="names_EncounterMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1080,7 +1080,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_list+responses+200+application-json+results+encounterconditionsummary+name"
   parentId="results_EncounterConditionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1293,7 +1293,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1378,7 +1378,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+names+encounterconditionname+language+name"
   parentId="names_EncounterConditionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1416,7 +1416,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+names+encounterconditionname+name"
   parentId="names_EncounterConditionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1482,7 +1482,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve+responses+200+application-json+values+encounterconditionvaluesummary+name"
   parentId="values_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1858,7 +1858,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_value_list+responses+200+application-json+results+encounterconditionvaluesummary+name"
   parentId="results_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2072,7 +2072,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+condition+name"
   parentId="condition"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2127,7 +2127,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2212,7 +2212,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+names+encounterconditionvaluename+language+name"
   parentId="names_EncounterConditionValueName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2250,7 +2250,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve+responses+200+application-json+names+encounterconditionvaluename+name"
   parentId="names_EncounterConditionValueName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
