--- a/examples/docusaurus/pokeapi/docs/api/endpoint/evolution.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/evolution.mdx
@@ -562,7 +562,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_chain_retrieve+responses+200+application-json+baby_trigger_item+name"
   parentId="baby_trigger_item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1807,7 +1807,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_evolution_trigger_list+responses+200+application-json+results+evolutiontriggersummary+name"
   parentId="results_EvolutionTriggerSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2020,7 +2020,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2105,7 +2105,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+language+name"
   parentId="names_EvolutionTriggerName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2143,7 +2143,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_evolution_trigger_retrieve+responses+200+application-json+names+evolutiontriggername+name"
   parentId="names_EvolutionTriggerName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
