--- a/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/games.mdx
@@ -365,7 +365,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_generation_list+responses+200+application-json+results+generationsummary+name"
   parentId="results_GenerationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -608,7 +608,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+abilities+abilitysummary+name"
   parentId="abilities_AbilitySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -682,7 +682,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+main_region+name"
   parentId="main_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -767,7 +767,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+moves+movesummary+name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -804,7 +804,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -889,7 +889,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+names+generationname+language+name"
   parentId="names_GenerationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -927,7 +927,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+names+generationname+name"
   parentId="names_GenerationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -993,7 +993,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+pokemon_species+pokemonspeciessummary+name"
   parentId="pokemon_species_PokemonSpeciesSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1078,7 +1078,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+types+typesummary+name"
   parentId="types_TypeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1163,7 +1163,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve+responses+200+application-json+version_groups+versiongroupsummary+name"
   parentId="version_groups_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1536,7 +1536,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pokedex_list+responses+200+application-json+results+pokedexsummary+name"
   parentId="results_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1779,7 +1779,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+descriptions+pokedexdescription+description"
   parentId="descriptions_PokedexDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1817,7 +1817,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+descriptions+pokedexdescription+language+name"
   parentId="descriptions_PokedexDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1890,7 +1890,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1975,7 +1975,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+names+pokedexname+language+name"
   parentId="names_PokedexName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2013,7 +2013,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+names+pokedexname+name"
   parentId="names_PokedexName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2203,7 +2203,7 @@ https://pokeapi.co/api/v2/pokemon-species/1/
   headingId="operation-api_v2_pokedex_retrieve+responses+200+application-json+region+name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2729,7 +2729,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_list+responses+200+application-json+results+versionsummary+name"
   parentId="results_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2950,7 +2950,7 @@ not sure how to add anything other than a hyperlink
   id="name"
   headingId="operation-api_v2_version_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3035,7 +3035,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve+responses+200+application-json+names+versionname+language+name"
   parentId="names_VersionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3073,7 +3073,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve+responses+200+application-json+names+versionname+name"
   parentId="names_VersionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3110,7 +3110,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve+responses+200+application-json+version_group+name"
   parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3486,7 +3486,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_group_list+responses+200+application-json+results+versiongroupsummary+name"
   parentId="results_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3700,7 +3700,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+generation+name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3860,7 +3860,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   id="name"
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4154,7 +4154,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   headingId="operation-api_v2_version_group_retrieve+responses+200+application-json+versions+versionsummary+name"
   parentId="versions_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
