--- a/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/items.mdx
@@ -361,7 +361,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_list+responses+200+application-json+results+itemsummary+name"
   parentId="results_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -753,7 +753,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+category+name"
   parentId="category"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -856,7 +856,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+effect_entries+itemeffecttext+effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -894,7 +894,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+effect_entries+itemeffecttext+language+name"
   parentId="effect_entries_ItemEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -932,7 +932,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+effect_entries+itemeffecttext+short_effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 300","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1017,7 +1017,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+flavor_text_entries+itemflavortext+language+name"
   parentId="flavor_text_entries_ItemFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1093,7 +1093,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+flavor_text_entries+itemflavortext+version_group+name"
   parentId="flavor_text_entries_ItemFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1149,7 +1149,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+fling_effect+name"
   parentId="fling_effect"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1290,7 +1290,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+game_indices+itemgameindex+generation+name"
   parentId="game_indices_ItemGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1555,7 +1555,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="name"
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1640,7 +1640,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+names+itemname+language+name"
   parentId="names_ItemName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1678,7 +1678,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve+responses+200+application-json+names+itemname+name"
   parentId="names_ItemName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2111,7 +2111,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_category_list+responses+200+application-json+results+itemcategorysummary+name"
   parentId="results_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2372,7 +2372,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+items+itemsummary+name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2409,7 +2409,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2494,7 +2494,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+names+itemcategoryname+language+name"
   parentId="names_ItemCategoryName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2532,7 +2532,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+names+itemcategoryname+name"
   parentId="names_ItemCategoryName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2569,7 +2569,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve+responses+200+application-json+pocket+name"
   parentId="pocket"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2945,7 +2945,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_attribute_list+responses+200+application-json+results+itemattributesummary+name"
   parentId="results_ItemAttributeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3188,7 +3188,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+descriptions+itemattributedescription+description"
   parentId="descriptions_ItemAttributeDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3226,7 +3226,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+descriptions+itemattributedescription+language+name"
   parentId="descriptions_ItemAttributeDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3386,7 +3386,7 @@ https://pokeapi.co/api/v2/item/1/
   id="name"
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3471,7 +3471,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+names+itemattributename+language+name"
   parentId="names_ItemAttributeName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3509,7 +3509,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve+responses+200+application-json+names+itemattributename+name"
   parentId="names_ItemAttributeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3866,7 +3866,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_fling_effect_list+responses+200+application-json+results+itemflingeffectsummary+name"
   parentId="results_ItemFlingEffectSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4109,7 +4109,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+effect_entries+itemflingeffecteffecttext+effect"
   parentId="effect_entries_ItemFlingEffectEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4147,7 +4147,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+effect_entries+itemflingeffecteffecttext+language+name"
   parentId="effect_entries_ItemFlingEffectEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4250,7 +4250,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+items+itemsummary+name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4287,7 +4287,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_fling_effect_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4644,7 +4644,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_pocket_list+responses+200+application-json+results+itempocketsummary+name"
   parentId="results_ItemPocketSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4887,7 +4887,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+categories+itemcategorysummary+name"
   parentId="categories_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4942,7 +4942,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5027,7 +5027,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+names+itempocketname+language+name"
   parentId="names_ItemPocketName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5065,7 +5065,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve+responses+200+application-json+names+itempocketname+name"
   parentId="names_ItemPocketName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
