--- a/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/location.mdx
@@ -364,7 +364,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_list+responses+200+application-json+results+locationsummary+name"
   parentId="results_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -607,7 +607,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+areas+locationareasummary+name"
   parentId="areas_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -730,7 +730,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+game_indices+locationgameindex+generation+name"
   parentId="game_indices_LocationGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -785,7 +785,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -870,7 +870,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+names+locationname+language+name"
   parentId="names_LocationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -908,7 +908,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+names+locationname+name"
   parentId="names_LocationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -945,7 +945,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve+responses+200+application-json+region+name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1296,7 +1296,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_area_list+responses+200+application-json+results+locationareasummary+name"
   parentId="results_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1776,7 +1776,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+location+name"
   parentId="location"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1813,7 +1813,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   id="name"
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1898,7 +1898,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+names+locationareaname+language+name"
   parentId="names_LocationAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1936,7 +1936,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve+responses+200+application-json+names+locationareaname+name"
   parentId="names_LocationAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2523,7 +2523,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pal_park_area_list+responses+200+application-json+results+palparkareasummary+name"
   parentId="results_PalParkAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2736,7 +2736,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2821,7 +2821,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+names+palparkareaname+language+name"
   parentId="names_PalParkAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2859,7 +2859,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve+responses+200+application-json+names+palparkareaname+name"
   parentId="names_PalParkAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3392,7 +3392,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_region_list+responses+200+application-json+results+regionsummary+name"
   parentId="results_RegionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3650,7 +3650,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+locations+locationsummary+name"
   parentId="locations_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3706,7 +3706,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+main_generation+name"
   parentId="main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3743,7 +3743,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3828,7 +3828,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+names+regionname+language+name"
   parentId="names_RegionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3866,7 +3866,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+names+regionname+name"
   parentId="names_RegionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3932,7 +3932,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+pokedexes+pokedexsummary+name"
   parentId="pokedexes_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4017,7 +4017,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve+responses+200+application-json+version_groups+main_generation+name"
   parentId="version_groups_main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
