--- a/examples/docusaurus/pokeapi/docs/api/endpoint/machines.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/machines.mdx
@@ -577,7 +577,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve+responses+200+application-json+item+name"
   parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -633,7 +633,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve+responses+200+application-json+move+name"
   parentId="move"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -689,7 +689,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_machine_retrieve+responses+200+application-json+version_group+name"
   parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
