--- a/examples/docusaurus/pokeapi/docs/api/endpoint/moves.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/moves.mdx
@@ -361,7 +361,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_list+responses+200+application-json+results+movesummary+name"
   parentId="results_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -933,7 +933,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+contest_type+name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -989,7 +989,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+damage_class+name"
   parentId="damage_class"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1800,7 +1800,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+flavor_text_entries+moveflavortext+language+name"
   parentId="flavor_text_entries_MoveFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1857,7 +1857,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+flavor_text_entries+moveflavortext+version_group+name"
   parentId="flavor_text_entries_MoveFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1913,7 +1913,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+generation+name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2944,7 +2944,7 @@ https://pokeapi.co/api/v2/move/7/
   id="name"
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3029,7 +3029,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+names+movename+language+name"
   parentId="names_MoveName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3067,7 +3067,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+names+movename+name"
   parentId="names_MoveName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3411,7 +3411,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+type+name"
   parentId="past_values_MoveChange_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3468,7 +3468,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+past_values+movechange+version_group+name"
   parentId="past_values_MoveChange_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3950,7 +3950,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+target+name"
   parentId="target"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4006,7 +4006,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve+responses+200+application-json+type+name"
   parentId="type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4382,7 +4382,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_ailment_list+responses+200+application-json+results+movemetaailmentsummary+name"
   parentId="results_MoveMetaAilmentSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4700,7 +4700,7 @@ https://pokeapi.co/api/v2/move/9/
   id="name"
   headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4785,7 +4785,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+names+movemetaailmentname+language+name"
   parentId="names_MoveMetaAilmentName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4823,7 +4823,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve+responses+200+application-json+names+movemetaailmentname+name"
   parentId="names_MoveMetaAilmentName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5180,7 +5180,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_battle_style_list+responses+200+application-json+results+movebattlestylesummary+name"
   parentId="results_MoveBattleStyleSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5393,7 +5393,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_battle_style_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5478,7 +5478,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve+responses+200+application-json+names+movebattlestylename+language+name"
   parentId="names_MoveBattleStyleName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5516,7 +5516,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve+responses+200+application-json+names+movebattlestylename+name"
   parentId="names_MoveBattleStyleName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5873,7 +5873,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_category_list+responses+200+application-json+results+movemetacategorysummary+name"
   parentId="results_MoveMetaCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6116,7 +6116,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+descriptions+movemetacategorydescription+description"
   parentId="descriptions_MoveMetaCategoryDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6154,7 +6154,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+descriptions+movemetacategorydescription+language+name"
   parentId="descriptions_MoveMetaCategoryDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6314,7 +6314,7 @@ https://pokeapi.co/api/v2/move/47/
   id="name"
   headingId="operation-api_v2_move_category_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -6671,7 +6671,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_learn_method_list+responses+200+application-json+results+movelearnmethodsummary+name"
   parentId="results_MoveLearnMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6914,7 +6914,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+descriptions+movelearnmethoddescription+description"
   parentId="descriptions_MoveLearnMethodDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6952,7 +6952,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+descriptions+movelearnmethoddescription+language+name"
   parentId="descriptions_MoveLearnMethodDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7007,7 +7007,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -7092,7 +7092,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+names+movelearnmethodname+language+name"
   parentId="names_MoveLearnMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7130,7 +7130,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve+responses+200+application-json+names+movelearnmethodname+name"
   parentId="names_MoveLearnMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7592,7 +7592,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_target_list+responses+200+application-json+results+movetargetsummary+name"
   parentId="results_MoveTargetSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7835,7 +7835,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+descriptions+movetargetdescription+description"
   parentId="descriptions_MoveTargetDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7873,7 +7873,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+descriptions+movetargetdescription+language+name"
   parentId="descriptions_MoveTargetDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7976,7 +7976,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+moves+movesummary+name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8013,7 +8013,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -8098,7 +8098,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+names+movetargetname+language+name"
   parentId="names_MoveTargetName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8136,7 +8136,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve+responses+200+application-json+names+movetargetname+name"
   parentId="names_MoveTargetName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
