--- a/examples/docusaurus/pokeapi/docs/api/endpoint/utility.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/utility.mdx
@@ -364,7 +364,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list+responses+200+application-json+results+languagesummary+name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -577,7 +577,7 @@ This parameter can be a string or an integer.
   id="iso3166"
   headingId="operation-api_v2_language_retrieve+responses+200+application-json+iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 2","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -595,7 +595,7 @@ This parameter can be a string or an integer.
   id="iso639"
   headingId="operation-api_v2_language_retrieve+responses+200+application-json+iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 10","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -613,7 +613,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_language_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -698,7 +698,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+language+name"
   parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -736,7 +736,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_retrieve+responses+200+application-json+names+languagename+name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
