--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -389,7 +389,7 @@ return a+b
   id="top_p"
   headingId="operation-fim_completion_v1_fim_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -1772,7 +1772,7 @@ return a+b
   id="top_p"
   headingId="operation-stream_fim_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
