--- a/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fine-tuning/jobs/page.mdx
@@ -348,7 +348,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_completionjobout_hyperparameters_learning_rate"
   parentId="data_CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1314,7 +1314,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs_responses_200_application-json_data_classifierjobout_hyperparameters_learning_rate"
   parentId="data_ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2301,7 +2301,7 @@ This field will be required in a future release.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_classifier_targets_classifiertargetin_weight"
   parentId="classifier_targets_ClassifierTargetIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2413,7 +2413,7 @@ The fine-tuning hyperparameter settings used in a fine-tune job.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_completiontrainingparametersin_learning_rate"
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2570,7 +2570,7 @@ The fine-tuning hyperparameter settings used in a classifier fine-tune job.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_hyperparameters_classifiertrainingparametersin_learning_rate"
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2724,7 +2724,7 @@ _Default Value:_ `0.0001`
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_integrations_wandbintegration_api_key"
   parentId="integrations_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2836,7 +2836,7 @@ _Default Value:_ `"wandb"`
   id="invalid_sample_skip_percentage"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_invalid_sample_skip_percentage"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 0.5","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2950,7 +2950,7 @@ The name of the model to fine-tune.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_request_repositories_wandbintegration_api_key"
   parentId="repositories_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3386,7 +3386,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_completionjobout_hyperparameters_learning_rate"
   parentId="CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4351,7 +4351,7 @@ The UNIX timestamp (in seconds) for when the fine-tuning job was created.
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job_responses_200_application-json_classifierjobout_hyperparameters_learning_rate"
   parentId="ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6038,7 +6038,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7398,7 +7398,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -8701,7 +8701,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -10061,7 +10061,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -11358,7 +11358,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_completiondetailedjobout_hyperparameters_learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -12718,7 +12718,7 @@ The name of the event.
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job_responses_200_application-json_classifierdetailedjobout_hyperparameters_learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
