--- a/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/ocr/page.mdx
@@ -1090,7 +1090,7 @@ The dimensions of the PDF Page's screenshot image
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_dpi"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1115,7 +1115,7 @@ Dots per inch of the page-image
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_height"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1140,7 +1140,7 @@ Height of the image in pixels
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_dimensions_ocrpagedimensions_width"
   parentId="pages_OCRPageObject_dimensions_OCRPageDimensions"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1358,7 +1358,7 @@ Image ID for extracted image in a page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_pages_ocrpageobject_index"
   parentId="pages_OCRPageObject"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1445,7 +1445,7 @@ The markdown string response of the page
   headingId="operation-ocr_v1_ocr_post_responses_200_application-json_usage_info_pages_processed"
   parentId="usage_info"
   typeInfo={{"label":"integer","linkedLabel":"integer","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
