--- a/examples/nextra/pokeapi/src/app/api/endpoint/berries/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/berries/page.mdx
@@ -360,7 +360,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_list_responses_200_application-json_results_berrysummary_name"
   parentId="results_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -571,7 +571,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_firmness_name"
   parentId="firmness"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -739,7 +739,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_item_name"
   parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -794,7 +794,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -849,7 +849,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_natural_gift_type_name"
   parentId="natural_gift_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1279,7 +1279,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary_name"
   parentId="results_BerryFirmnessSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1522,7 +1522,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_berries_berrysummary_name"
   parentId="berries_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1577,7 +1577,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1662,7 +1662,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname_language_name"
   parentId="names_BerryFirmnessName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1700,7 +1700,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname_name"
   parentId="names_BerryFirmnessName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2057,7 +2057,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary_name"
   parentId="results_BerryFlavorSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2347,7 +2347,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_contest_type_name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2402,7 +2402,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2487,7 +2487,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname_language_name"
   parentId="names_BerryFlavorName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2525,7 +2525,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname_name"
   parentId="names_BerryFlavorName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
