--- a/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/encounters/page.mdx
@@ -368,7 +368,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary_name"
   parentId="results_EncounterMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -581,7 +581,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -666,7 +666,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname_language_name"
   parentId="names_EncounterMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -704,7 +704,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname_name"
   parentId="names_EncounterMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1079,7 +1079,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary_name"
   parentId="results_EncounterConditionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1292,7 +1292,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1377,7 +1377,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname_language_name"
   parentId="names_EncounterConditionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1415,7 +1415,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname_name"
   parentId="names_EncounterConditionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1481,7 +1481,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary_name"
   parentId="values_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1857,7 +1857,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary_name"
   parentId="results_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2071,7 +2071,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_condition_name"
   parentId="condition"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2126,7 +2126,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2211,7 +2211,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename_language_name"
   parentId="names_EncounterConditionValueName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2249,7 +2249,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename_name"
   parentId="names_EncounterConditionValueName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
