--- a/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/items/page.mdx
@@ -360,7 +360,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_list_responses_200_application-json_results_itemsummary_name"
   parentId="results_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -752,7 +752,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_category_name"
   parentId="category"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -855,7 +855,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -893,7 +893,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_language_name"
   parentId="effect_entries_ItemEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -931,7 +931,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_effect_entries_itemeffecttext_short_effect"
   parentId="effect_entries_ItemEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 300","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1016,7 +1016,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext_language_name"
   parentId="flavor_text_entries_ItemFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1092,7 +1092,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_flavor_text_entries_itemflavortext_version_group_name"
   parentId="flavor_text_entries_ItemFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1148,7 +1148,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_fling_effect_name"
   parentId="fling_effect"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1289,7 +1289,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_game_indices_itemgameindex_generation_name"
   parentId="game_indices_ItemGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1554,7 +1554,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   id="name"
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1639,7 +1639,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname_language_name"
   parentId="names_ItemName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1677,7 +1677,7 @@ https://pokeapi.co/api/v2/item-attribute/1/
   headingId="operation-api_v2_item_retrieve_responses_200_application-json_names_itemname_name"
   parentId="names_ItemName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2110,7 +2110,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_category_list_responses_200_application-json_results_itemcategorysummary_name"
   parentId="results_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2371,7 +2371,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_items_itemsummary_name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2408,7 +2408,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2493,7 +2493,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname_language_name"
   parentId="names_ItemCategoryName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2531,7 +2531,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_names_itemcategoryname_name"
   parentId="names_ItemCategoryName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2568,7 +2568,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_category_retrieve_responses_200_application-json_pocket_name"
   parentId="pocket"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2944,7 +2944,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_attribute_list_responses_200_application-json_results_itemattributesummary_name"
   parentId="results_ItemAttributeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3187,7 +3187,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription_description"
   parentId="descriptions_ItemAttributeDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3225,7 +3225,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_descriptions_itemattributedescription_language_name"
   parentId="descriptions_ItemAttributeDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3385,7 +3385,7 @@ https://pokeapi.co/api/v2/item/1/
   id="name"
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3470,7 +3470,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename_language_name"
   parentId="names_ItemAttributeName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3508,7 +3508,7 @@ https://pokeapi.co/api/v2/item/1/
   headingId="operation-api_v2_item_attribute_retrieve_responses_200_application-json_names_itemattributename_name"
   parentId="names_ItemAttributeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3865,7 +3865,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_fling_effect_list_responses_200_application-json_results_itemflingeffectsummary_name"
   parentId="results_ItemFlingEffectSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4108,7 +4108,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext_effect"
   parentId="effect_entries_ItemFlingEffectEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4146,7 +4146,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_effect_entries_itemflingeffecteffecttext_language_name"
   parentId="effect_entries_ItemFlingEffectEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4249,7 +4249,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_items_itemsummary_name"
   parentId="items_ItemSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4286,7 +4286,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_fling_effect_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4643,7 +4643,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_item_pocket_list_responses_200_application-json_results_itempocketsummary_name"
   parentId="results_ItemPocketSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4886,7 +4886,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_categories_itemcategorysummary_name"
   parentId="categories_ItemCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4941,7 +4941,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5026,7 +5026,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname_language_name"
   parentId="names_ItemPocketName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5064,7 +5064,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_item_pocket_retrieve_responses_200_application-json_names_itempocketname_name"
   parentId="names_ItemPocketName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
