--- a/examples/nextra/pokeapi/src/app/api/endpoint/location/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/location/page.mdx
@@ -363,7 +363,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_list_responses_200_application-json_results_locationsummary_name"
   parentId="results_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -606,7 +606,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_areas_locationareasummary_name"
   parentId="areas_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -729,7 +729,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_game_indices_locationgameindex_generation_name"
   parentId="game_indices_LocationGameIndex_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -784,7 +784,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -869,7 +869,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname_language_name"
   parentId="names_LocationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -907,7 +907,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_names_locationname_name"
   parentId="names_LocationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -944,7 +944,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_location_retrieve_responses_200_application-json_region_name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1295,7 +1295,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_location_area_list_responses_200_application-json_results_locationareasummary_name"
   parentId="results_LocationAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1775,7 +1775,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_location_name"
   parentId="location"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1812,7 +1812,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   id="name"
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1897,7 +1897,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname_language_name"
   parentId="names_LocationAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1935,7 +1935,7 @@ https://pokeapi.co/api/v2/encounter-method/2/
   headingId="operation-api_v2_location_area_retrieve_responses_200_application-json_names_locationareaname_name"
   parentId="names_LocationAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2522,7 +2522,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pal_park_area_list_responses_200_application-json_results_palparkareasummary_name"
   parentId="results_PalParkAreaSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2735,7 +2735,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2820,7 +2820,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname_language_name"
   parentId="names_PalParkAreaName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2858,7 +2858,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pal_park_area_retrieve_responses_200_application-json_names_palparkareaname_name"
   parentId="names_PalParkAreaName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3391,7 +3391,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_region_list_responses_200_application-json_results_regionsummary_name"
   parentId="results_RegionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3649,7 +3649,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_locations_locationsummary_name"
   parentId="locations_LocationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3705,7 +3705,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_main_generation_name"
   parentId="main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3742,7 +3742,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3827,7 +3827,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname_language_name"
   parentId="names_RegionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3865,7 +3865,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_names_regionname_name"
   parentId="names_RegionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3931,7 +3931,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_pokedexes_pokedexsummary_name"
   parentId="pokedexes_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4016,7 +4016,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_region_retrieve_responses_200_application-json_version_groups_main_generation_name"
   parentId="version_groups_main_generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
