--- a/examples/nextra/pokeapi/src/app/api/endpoint/moves/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/moves/page.mdx
@@ -360,7 +360,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_list_responses_200_application-json_results_movesummary_name"
   parentId="results_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -932,7 +932,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_type_name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -988,7 +988,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_damage_class_name"
   parentId="damage_class"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1799,7 +1799,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext_language_name"
   parentId="flavor_text_entries_MoveFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1856,7 +1856,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext_version_group_name"
   parentId="flavor_text_entries_MoveFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1912,7 +1912,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_generation_name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2943,7 +2943,7 @@ https://pokeapi.co/api/v2/move/7/
   id="name"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3028,7 +3028,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename_language_name"
   parentId="names_MoveName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3066,7 +3066,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename_name"
   parentId="names_MoveName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3410,7 +3410,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_type_name"
   parentId="past_values_MoveChange_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3467,7 +3467,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_version_group_name"
   parentId="past_values_MoveChange_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3949,7 +3949,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_target_name"
   parentId="target"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4005,7 +4005,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_type_name"
   parentId="type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4381,7 +4381,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary_name"
   parentId="results_MoveMetaAilmentSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4699,7 +4699,7 @@ https://pokeapi.co/api/v2/move/9/
   id="name"
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4784,7 +4784,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname_language_name"
   parentId="names_MoveMetaAilmentName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4822,7 +4822,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname_name"
   parentId="names_MoveMetaAilmentName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5179,7 +5179,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary_name"
   parentId="results_MoveBattleStyleSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5392,7 +5392,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5477,7 +5477,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename_language_name"
   parentId="names_MoveBattleStyleName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5515,7 +5515,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename_name"
   parentId="names_MoveBattleStyleName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5872,7 +5872,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary_name"
   parentId="results_MoveMetaCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6115,7 +6115,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription_description"
   parentId="descriptions_MoveMetaCategoryDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6153,7 +6153,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription_language_name"
   parentId="descriptions_MoveMetaCategoryDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6313,7 +6313,7 @@ https://pokeapi.co/api/v2/move/47/
   id="name"
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -6670,7 +6670,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary_name"
   parentId="results_MoveLearnMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6913,7 +6913,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription_description"
   parentId="descriptions_MoveLearnMethodDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6951,7 +6951,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription_language_name"
   parentId="descriptions_MoveLearnMethodDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7006,7 +7006,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -7091,7 +7091,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname_language_name"
   parentId="names_MoveLearnMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7129,7 +7129,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname_name"
   parentId="names_MoveLearnMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7591,7 +7591,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary_name"
   parentId="results_MoveTargetSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7834,7 +7834,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription_description"
   parentId="descriptions_MoveTargetDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7872,7 +7872,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription_language_name"
   parentId="descriptions_MoveTargetDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7975,7 +7975,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_moves_movesummary_name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8012,7 +8012,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -8097,7 +8097,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname_language_name"
   parentId="names_MoveTargetName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8135,7 +8135,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname_name"
   parentId="names_MoveTargetName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
