--- a/examples/custom/pokeapi/src/app/api/endpoint/berries/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/berries/page.mdx
@@ -355,7 +355,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_list_responses_200_application-json_results_berrysummary_name"
   parentId="results_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -566,7 +566,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_firmness_name"
   parentId="firmness"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -734,7 +734,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_item_name"
   parentId="item"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -789,7 +789,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -844,7 +844,7 @@ _Example:_
   headingId="operation-api_v2_berry_retrieve_responses_200_application-json_natural_gift_type_name"
   parentId="natural_gift_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1274,7 +1274,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_firmness_list_responses_200_application-json_results_berryfirmnesssummary_name"
   parentId="results_BerryFirmnessSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1517,7 +1517,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_berries_berrysummary_name"
   parentId="berries_BerrySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1572,7 +1572,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1657,7 +1657,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname_language_name"
   parentId="names_BerryFirmnessName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1695,7 +1695,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_berry_firmness_retrieve_responses_200_application-json_names_berryfirmnessname_name"
   parentId="names_BerryFirmnessName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2052,7 +2052,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_berry_flavor_list_responses_200_application-json_results_berryflavorsummary_name"
   parentId="results_BerryFlavorSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2342,7 +2342,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_contest_type_name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2397,7 +2397,7 @@ _Example:_
   id="name"
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2482,7 +2482,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname_language_name"
   parentId="names_BerryFlavorName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2520,7 +2520,7 @@ _Example:_
   headingId="operation-api_v2_berry_flavor_retrieve_responses_200_application-json_names_berryflavorname_name"
   parentId="names_BerryFlavorName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
