--- a/examples/custom/pokeapi/src/app/api/endpoint/contests/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/contests/page.mdx
@@ -361,7 +361,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_contest_type_list_responses_200_application-json_results_contesttypesummary_name"
   parentId="results_ContestTypeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -575,7 +575,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_berry_flavor_name"
   parentId="berry_flavor"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -630,7 +630,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -696,7 +696,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename_color"
   parentId="names_ContestTypeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 10","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -734,7 +734,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename_language_name"
   parentId="names_ContestTypeName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -772,7 +772,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve_responses_200_application-json_names_contesttypename_name"
   parentId="names_ContestTypeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1371,7 +1371,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext_effect"
   parentId="effect_entries_ContestEffectEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1409,7 +1409,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_effect_entries_contesteffecteffecttext_language_name"
   parentId="effect_entries_ContestEffectEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1494,7 +1494,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext_flavor_text"
   parentId="flavor_text_entries_ContestEffectFlavorText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 500","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1532,7 +1532,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_contesteffectflavortext_language_name"
   parentId="flavor_text_entries_ContestEffectFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2186,7 +2186,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext_flavor_text"
   parentId="flavor_text_entries_SuperContestEffectFlavorText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 500","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2224,7 +2224,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_flavor_text_entries_supercontesteffectflavortext_language_name"
   parentId="flavor_text_entries_SuperContestEffectFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2327,7 +2327,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve_responses_200_application-json_moves_movesummary_name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
