--- a/examples/custom/pokeapi/src/app/api/endpoint/encounters/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/encounters/page.mdx
@@ -363,7 +363,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_method_list_responses_200_application-json_results_encountermethodsummary_name"
   parentId="results_EncounterMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -576,7 +576,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -661,7 +661,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname_language_name"
   parentId="names_EncounterMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -699,7 +699,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_method_retrieve_responses_200_application-json_names_encountermethodname_name"
   parentId="names_EncounterMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1074,7 +1074,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_list_responses_200_application-json_results_encounterconditionsummary_name"
   parentId="results_EncounterConditionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1287,7 +1287,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1372,7 +1372,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname_language_name"
   parentId="names_EncounterConditionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1410,7 +1410,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_names_encounterconditionname_name"
   parentId="names_EncounterConditionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1476,7 +1476,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_retrieve_responses_200_application-json_values_encounterconditionvaluesummary_name"
   parentId="values_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1852,7 +1852,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_encounter_condition_value_list_responses_200_application-json_results_encounterconditionvaluesummary_name"
   parentId="results_EncounterConditionValueSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2066,7 +2066,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_condition_name"
   parentId="condition"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2121,7 +2121,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -2206,7 +2206,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename_language_name"
   parentId="names_EncounterConditionValueName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2244,7 +2244,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_encounter_condition_value_retrieve_responses_200_application-json_names_encounterconditionvaluename_name"
   parentId="names_EncounterConditionValueName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
