--- a/examples/custom/pokeapi/src/app/api/endpoint/moves/page.mdx
+++ b/examples/custom/pokeapi/src/app/api/endpoint/moves/page.mdx
@@ -355,7 +355,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_list_responses_200_application-json_results_movesummary_name"
   parentId="results_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -927,7 +927,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_contest_type_name"
   parentId="contest_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -983,7 +983,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_damage_class_name"
   parentId="damage_class"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1794,7 +1794,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext_language_name"
   parentId="flavor_text_entries_MoveFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1851,7 +1851,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_flavor_text_entries_moveflavortext_version_group_name"
   parentId="flavor_text_entries_MoveFlavorText_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1907,7 +1907,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_generation_name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2938,7 +2938,7 @@ https://pokeapi.co/api/v2/move/7/
   id="name"
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3023,7 +3023,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename_language_name"
   parentId="names_MoveName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3061,7 +3061,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_names_movename_name"
   parentId="names_MoveName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3405,7 +3405,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_type_name"
   parentId="past_values_MoveChange_type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3462,7 +3462,7 @@ Inflicts regular damage with no additional effect.
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_past_values_movechange_version_group_name"
   parentId="past_values_MoveChange_version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3944,7 +3944,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_target_name"
   parentId="target"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4000,7 +4000,7 @@ https://pokeapi.co/api/v2/move/7/
   headingId="operation-api_v2_move_retrieve_responses_200_application-json_type_name"
   parentId="type"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4376,7 +4376,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_ailment_list_responses_200_application-json_results_movemetaailmentsummary_name"
   parentId="results_MoveMetaAilmentSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4694,7 +4694,7 @@ https://pokeapi.co/api/v2/move/9/
   id="name"
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4779,7 +4779,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname_language_name"
   parentId="names_MoveMetaAilmentName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -4817,7 +4817,7 @@ https://pokeapi.co/api/v2/move/9/
   headingId="operation-api_v2_move_ailment_retrieve_responses_200_application-json_names_movemetaailmentname_name"
   parentId="names_MoveMetaAilmentName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5174,7 +5174,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_battle_style_list_responses_200_application-json_results_movebattlestylesummary_name"
   parentId="results_MoveBattleStyleSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5387,7 +5387,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -5472,7 +5472,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename_language_name"
   parentId="names_MoveBattleStyleName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5510,7 +5510,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_battle_style_retrieve_responses_200_application-json_names_movebattlestylename_name"
   parentId="names_MoveBattleStyleName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -5867,7 +5867,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_category_list_responses_200_application-json_results_movemetacategorysummary_name"
   parentId="results_MoveMetaCategorySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6110,7 +6110,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription_description"
   parentId="descriptions_MoveMetaCategoryDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6148,7 +6148,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_descriptions_movemetacategorydescription_language_name"
   parentId="descriptions_MoveMetaCategoryDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6308,7 +6308,7 @@ https://pokeapi.co/api/v2/move/47/
   id="name"
   headingId="operation-api_v2_move_category_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -6665,7 +6665,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_learn_method_list_responses_200_application-json_results_movelearnmethodsummary_name"
   parentId="results_MoveLearnMethodSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6908,7 +6908,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription_description"
   parentId="descriptions_MoveLearnMethodDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -6946,7 +6946,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_descriptions_movelearnmethoddescription_language_name"
   parentId="descriptions_MoveLearnMethodDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7001,7 +7001,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -7086,7 +7086,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname_language_name"
   parentId="names_MoveLearnMethodName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7124,7 +7124,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_learn_method_retrieve_responses_200_application-json_names_movelearnmethodname_name"
   parentId="names_MoveLearnMethodName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7586,7 +7586,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_move_target_list_responses_200_application-json_results_movetargetsummary_name"
   parentId="results_MoveTargetSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7829,7 +7829,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription_description"
   parentId="descriptions_MoveTargetDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7867,7 +7867,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_descriptions_movetargetdescription_language_name"
   parentId="descriptions_MoveTargetDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -7970,7 +7970,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_moves_movesummary_name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8007,7 +8007,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -8092,7 +8092,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname_language_name"
   parentId="names_MoveTargetName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -8130,7 +8130,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_move_target_retrieve_responses_200_application-json_names_movetargetname_name"
   parentId="names_MoveTargetName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
