--- a/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/agents.mdx
@@ -281,7 +281,7 @@ defaultValue: MyDefaultValue
   id="frequency_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post+request+frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5595,7 +5595,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post+request+presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -10168,7 +10168,7 @@ defaultValue: MyDefaultValue
   id="frequency_penalty"
   headingId="operation-stream_agents+request+frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -15482,7 +15482,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_agents+request+presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
