--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/agents.mdx
@@ -1602,7 +1602,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_list+responses+200+application-json+agent+completion_args+temperature"
   parentId="Agent_completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3414,7 +3414,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_list+responses+200+application-json+agent+tools+documentlibrarytool+library_ids"
   parentId="Agent_tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5068,7 +5068,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_create+request+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6680,7 +6680,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_create+request+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -8102,7 +8102,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_create+responses+200+application-json+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -9905,7 +9905,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_create+responses+200+application-json+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -11611,7 +11611,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_get+responses+200+application-json+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -13414,7 +13414,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_get+responses+200+application-json+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -15122,7 +15122,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update+request+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -16734,7 +16734,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update+request+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -18156,7 +18156,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update+responses+200+application-json+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -19959,7 +19959,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update+responses+200+application-json+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -21712,7 +21712,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update_version+responses+200+application-json+completion_args+temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -23515,7 +23515,7 @@ defaultValue: MyDefaultValue
   headingId="operation-agents_api_v1_agents_update_version+responses+200+application-json+tools+documentlibrarytool+library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
