--- a/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/chat.mdx
@@ -224,7 +224,7 @@ requestBody:
   id="frequency_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post+request+frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5588,7 +5588,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post+request+presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -7462,7 +7462,7 @@ defaultValue: MyDefaultValue
   id="top_p"
   headingId="operation-chat_completion_v1_chat_completions_post+request+top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -10285,7 +10285,7 @@ requestBody:
   id="frequency_penalty"
   headingId="operation-stream_chat+request+frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -15649,7 +15649,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_chat+request+presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -17533,7 +17533,7 @@ defaultValue: MyDefaultValue
   id="top_p"
   headingId="operation-stream_chat+request+top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
