--- a/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/fine-tuning/jobs.mdx
@@ -736,7 +736,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses+200+application-json+data+completionjobout+hyperparameters+learning_rate"
   parentId="data_CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3570,7 +3570,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_jobs+responses+200+application-json+data+classifierjobout+hyperparameters+learning_rate"
   parentId="data_ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6242,7 +6242,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+classifier_targets+classifiertargetin+weight"
   parentId="classifier_targets_ClassifierTargetIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6559,7 +6559,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+hyperparameters+completiontrainingparametersin+learning_rate"
   parentId="hyperparameters_CompletionTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7003,7 +7003,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+hyperparameters+classifiertrainingparametersin+learning_rate"
   parentId="hyperparameters_ClassifierTrainingParametersIn"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7456,7 +7456,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+integrations+wandbintegration+api_key"
   parentId="integrations_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7765,7 +7765,7 @@ _Default Value:_ `"wandb"`
   id="invalid_sample_skip_percentage"
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+invalid_sample_skip_percentage"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 0.5","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -8080,7 +8080,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+request+repositories+wandbintegration+api_key"
   parentId="repositories_WandbIntegration"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Length: 40","variant":"warning"},{"title":"Max Length: 40","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -9315,7 +9315,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses+200+application-json+completionjobout+hyperparameters+learning_rate"
   parentId="CompletionJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -12148,7 +12148,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_create_fine_tuning_job+responses+200+application-json+classifierjobout+hyperparameters+learning_rate"
   parentId="ClassifierJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -16444,7 +16444,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses+200+application-json+completiondetailedjobout+hyperparameters+learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -20566,7 +20566,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_get_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+hyperparameters+learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -24117,7 +24117,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses+200+application-json+completiondetailedjobout+hyperparameters+learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -28239,7 +28239,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_cancel_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+hyperparameters+learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -31800,7 +31800,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses+200+application-json+completiondetailedjobout+hyperparameters+learning_rate"
   parentId="CompletionDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -35922,7 +35922,7 @@ defaultValue: MyDefaultValue
   headingId="operation-jobs_api_routes_fine_tuning_start_fine_tuning_job+responses+200+application-json+classifierdetailedjobout+hyperparameters+learning_rate"
   parentId="ClassifierDetailedJobOut_hyperparameters"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 1e-8","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
