--- a/examples/docusaurus/pokeapi/docs/api/endpoint/contests.mdx
+++ b/examples/docusaurus/pokeapi/docs/api/endpoint/contests.mdx
@@ -367,7 +367,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_contest_type_list+responses+200+application-json+results+contesttypesummary+name"
   parentId="results_ContestTypeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -581,7 +581,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+berry_flavor+name"
   parentId="berry_flavor"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -636,7 +636,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -702,7 +702,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+names+contesttypename+color"
   parentId="names_ContestTypeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 10","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -740,7 +740,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+names+contesttypename+language+name"
   parentId="names_ContestTypeName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -778,7 +778,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_type_retrieve+responses+200+application-json+names+contesttypename+name"
   parentId="names_ContestTypeName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1377,7 +1377,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+effect_entries+contesteffecteffecttext+effect"
   parentId="effect_entries_ContestEffectEffectText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 6000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1415,7 +1415,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+effect_entries+contesteffecteffecttext+language+name"
   parentId="effect_entries_ContestEffectEffectText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1500,7 +1500,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+contesteffectflavortext+flavor_text"
   parentId="flavor_text_entries_ContestEffectFlavorText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 500","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1538,7 +1538,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+contesteffectflavortext+language+name"
   parentId="flavor_text_entries_ContestEffectFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2192,7 +2192,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+supercontesteffectflavortext+flavor_text"
   parentId="flavor_text_entries_SuperContestEffectFlavorText"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 500","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2230,7 +2230,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+flavor_text_entries+supercontesteffectflavortext+language+name"
   parentId="flavor_text_entries_SuperContestEffectFlavorText_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2333,7 +2333,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_super_contest_effect_retrieve+responses+200+application-json+moves+movesummary+name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
