--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -192,7 +192,7 @@ The ID of the agent to use for this completion.
   id="frequency_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2139,7 +2139,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-agents_completion_v1_agents_completions_post_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3890,7 +3890,7 @@ The ID of the agent to use for this completion.
   id="frequency_penalty"
   headingId="operation-stream_agents_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5837,7 +5837,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_agents_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
