--- a/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/beta/agents/page.mdx
@@ -677,7 +677,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_list_responses_200_application-json_agent_completion_args_temperature"
   parentId="Agent_completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1317,7 +1317,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_list_responses_200_application-json_agent_tools_documentlibrarytool_library_ids"
   parentId="Agent_tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -1942,7 +1942,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_create_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -2513,7 +2513,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_create_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3017,7 +3017,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -3648,7 +3648,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_create_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4325,7 +4325,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -4956,7 +4956,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_get_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -5619,7 +5619,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_request_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6190,7 +6190,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_request_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -6694,7 +6694,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -7325,7 +7325,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -8033,7 +8033,7 @@ An object specifying the format that the model must output. Setting to `\{ "type
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_completion_args_temperature"
   parentId="completion_args"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
@@ -8664,7 +8664,7 @@ _Default Value:_ `"image_generation"`
   headingId="operation-agents_api_v1_agents_update_version_responses_200_application-json_tools_documentlibrarytool_library_ids"
   parentId="tools_DocumentLibraryTool"
   typeInfo={{"label":"array","linkedLabel":"string","children":[{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Min Items: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={false}
 >
