--- a/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/chat/page.mdx
@@ -168,7 +168,7 @@ with Mistral(
   id="frequency_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2149,7 +2149,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-chat_completion_v1_chat_completions_post_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -2774,7 +2774,7 @@ this restriction of `Function` is used to select a specific function to call
   id="top_p"
   headingId="operation-chat_completion_v1_chat_completions_post_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -3942,7 +3942,7 @@ with Mistral(
   id="frequency_penalty"
   headingId="operation-stream_chat_request_frequency_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -5923,7 +5923,7 @@ _Default Value:_ `"content"`
   id="presence_penalty"
   headingId="operation-stream_chat_request_presence_penalty"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: -2","variant":"warning"},{"title":"Max: 2","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
@@ -6542,7 +6542,7 @@ this restriction of `Function` is used to select a specific function to call
   id="top_p"
   headingId="operation-stream_chat_request_top_p"
   typeInfo={{"label":"number","linkedLabel":"number","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Min: 0","variant":"warning"},{"title":"Max: 1","variant":"warning"}]}
   hasFrontMatter={true}
   expandByDefault={true}
 >
