--- a/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/games/page.mdx
@@ -364,7 +364,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_generation_list_responses_200_application-json_results_generationsummary_name"
   parentId="results_GenerationSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -607,7 +607,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_abilities_abilitysummary_name"
   parentId="abilities_AbilitySummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -681,7 +681,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_main_region_name"
   parentId="main_region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -766,7 +766,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_moves_movesummary_name"
   parentId="moves_MoveSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -803,7 +803,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -888,7 +888,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname_language_name"
   parentId="names_GenerationName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -926,7 +926,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_names_generationname_name"
   parentId="names_GenerationName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -992,7 +992,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_pokemon_species_pokemonspeciessummary_name"
   parentId="pokemon_species_PokemonSpeciesSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1077,7 +1077,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_types_typesummary_name"
   parentId="types_TypeSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1162,7 +1162,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_generation_retrieve_responses_200_application-json_version_groups_versiongroupsummary_name"
   parentId="version_groups_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1535,7 +1535,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_pokedex_list_responses_200_application-json_results_pokedexsummary_name"
   parentId="results_PokedexSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1778,7 +1778,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription_description"
   parentId="descriptions_PokedexDescription"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[]}
+  typeAnnotations={[{"title":"Max Length: 1000","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1816,7 +1816,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_descriptions_pokedexdescription_language_name"
   parentId="descriptions_PokedexDescription_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -1889,7 +1889,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -1974,7 +1974,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname_language_name"
   parentId="names_PokedexName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2012,7 +2012,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_names_pokedexname_name"
   parentId="names_PokedexName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2202,7 +2202,7 @@ https://pokeapi.co/api/v2/pokemon-species/1/
   headingId="operation-api_v2_pokedex_retrieve_responses_200_application-json_region_name"
   parentId="region"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2728,7 +2728,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_list_responses_200_application-json_results_versionsummary_name"
   parentId="results_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -2949,7 +2949,7 @@ not sure how to add anything other than a hyperlink
   id="name"
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -3034,7 +3034,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname_language_name"
   parentId="names_VersionName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3072,7 +3072,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_names_versionname_name"
   parentId="names_VersionName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3109,7 +3109,7 @@ not sure how to add anything other than a hyperlink
   headingId="operation-api_v2_version_retrieve_responses_200_application-json_version_group_name"
   parentId="version_group"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3485,7 +3485,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_version_group_list_responses_200_application-json_results_versiongroupsummary_name"
   parentId="results_VersionGroupSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3699,7 +3699,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_generation_name"
   parentId="generation"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -3859,7 +3859,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   id="name"
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -4153,7 +4153,7 @@ https://pokeapi.co/api/v2/move-learn-method/1/
   headingId="operation-api_v2_version_group_retrieve_responses_200_application-json_versions_versionsummary_name"
   parentId="versions_VersionSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
