--- a/examples/nextra/pokeapi/src/app/api/endpoint/utility/page.mdx
+++ b/examples/nextra/pokeapi/src/app/api/endpoint/utility/page.mdx
@@ -363,7 +363,7 @@ http://api.example.org/accounts/?offset=200&limit=100
   headingId="operation-api_v2_language_list_responses_200_application-json_results_languagesummary_name"
   parentId="results_LanguageSummary"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -576,7 +576,7 @@ This parameter can be a string or an integer.
   id="iso3166"
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_iso3166"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 2","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -594,7 +594,7 @@ This parameter can be a string or an integer.
   id="iso639"
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_iso639"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 10","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -612,7 +612,7 @@ This parameter can be a string or an integer.
   id="name"
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_name"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={true}
 >
@@ -697,7 +697,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_language_name"
   parentId="names_LanguageName_language"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
@@ -735,7 +735,7 @@ This parameter can be a string or an integer.
   headingId="operation-api_v2_language_retrieve_responses_200_application-json_names_languagename_name"
   parentId="names_LanguageName"
   typeInfo={{"label":"string","linkedLabel":"string","children":[],"breakoutSubTypes":{}}}
-  typeAnnotations={[{"title":"required","variant":"warning"}]}
+  typeAnnotations={[{"title":"required","variant":"warning"},{"title":"Max Length: 200","variant":"warning"}]}
   hasFrontMatter={false}
   expandByDefault={false}
 >
